Atualização de arquivos

--- a/saude-preventiva-mama/src/2_fleury_mama_biopsia_editado.ipynb
+++ b/saude-preventiva-mama/src/2_fleury_mama_biopsia_editado.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "# filtros para a extração\n",
-    "table_biopsia = \"refined.saude_preventiva.fleury_laudos_mama_biopsia_v2\" \n",
+    "table_biopsia = \"refined.saude_preventiva.fleury_laudos_mama_biopsia\" \n",
     "\n",
     "where_clause = f\"\"\"\n",
     "    WHERE\n",
@@ -197,6 +197,15 @@
     "        AND (\n",
     "            idade_cliente >= 40 AND idade_cliente < 76\n",
     "        ) \n",
+    "        AND UPPER(flr.marca) ILIKE ANY(\n",
+    "            'AMAIS - BA',\n",
+    "            'AMAIS - PE',\n",
+    "            'AMAIS - SP',\n",
+    "            'Felippe Mattoso',\n",
+    "            'FLEURY',\n",
+    "            'IR',\n",
+    "            'LABS AMAIS'\n",
+    "        )\n",
     "\"\"\""
    ]
   },
@@ -222,7 +231,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Utiliza REGEXP_EXTRACT para buscar, no texto do campo 'laudo_tratado', \n",
     "# a ocorrência da palavra \"CARCINOMA\" relacionada à \"MAMA\" (seja antes ou depois de \"Topografia\").\n",
     "# O padrão regex considera maiúsculas/minúsculas e múltiplas linhas.\n",
