--- a/saude-preventiva-mama/docs/src/3_fleury_mama_anatomopatologico_editado.ipynb
+++ b/saude-preventiva-mama/docs/src/3_fleury_mama_anatomopatologico_editado.ipynb
@@ -945,10 +945,12 @@
     "    return None\n",
     "\n",
     "def extrai_grau_nuclear(txt):\n",
+    "    # Captura algo como \"Grau nuclear: 3\" ou \"grau nuclear 1\"\n",
     "    m = re.search(r\"grau\\s+nuclear\\s*[:\\-]?\\s*(\\d)\", txt, flags=re.IGNORECASE)\n",
     "    return int(m.group(1)) if m else None\n",
     "\n",
     "def extrai_formacao_tubulos(txt):\n",
+    "    # Ex.: \"formação de túbulos: 2\" ou \"formação de túbulos 3\"\n",
     "    m = re.search(r\"forma[cç][aã]o\\s+de\\s+t[uú]bulos\\s*[:\\-]?\\s*(\\d)\", txt, flags=re.IGNORECASE)\n",
     "    return int(m.group(1)) if m else None\n",
     "\n",
