--- a/rascunho.ipynb
+++ b/rascunho.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "296df1b3",
    "metadata": {},
    "outputs": [
@@ -101,6 +101,7 @@
     }
    ],
    "source": [
+    "import re\n",
     "def pega_texto_marcador(txt: str, sigla: str) -> int:\n",
     "    \"\"\"\n",
     "    Pega o texto que vem depois do marcador, limitado em 100 caracteres.\n",
@@ -341,71 +342,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "b7a4ef7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dti-\\AppData\\Local\\Temp\\ipykernel_12932\\1097389180.py:53: CSSWarning: Unhandled color format: ''\n",
-      "  styler.to_excel(writer, sheet_name='Resultados', index=False)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arquivo Excel salvo como 'resultados_imuno_formatados.xlsx' com as abas 'Resultados' e 'Resumo'.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Coluna</th>\n",
-       "      <th>Contagem de Erros</th>\n",
-       "      <th>Percentual de Erros (%)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>receptor_estrogeno.acertou</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>2.278703</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Coluna  Contagem de Erros  Percentual de Erros (%)\n",
-       "0  receptor_estrogeno.acertou               26.0                 2.278703"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def configura_excel(df):\n",
     "    \"\"\"\n",
@@ -465,8 +405,135 @@
     "    print(\"Arquivo Excel salvo como 'resultados_imuno_formatados.xlsx' com as abas 'Resultados' e 'Resumo'.\")\n",
     "    display(resumo_df.head(1))\n",
     "\n",
-    "configura_excel(df_laura)"
+    "# configura_excel(df_laura)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "61781745",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>laudos</th>\n",
+       "      <th>receptor_estrogeno.valor_heu</th>\n",
+       "      <th>receptor_estrogeno.valor_mod</th>\n",
+       "      <th>receptor_estrogeno.acertou</th>\n",
+       "      <th>receptor_progesterona.valor_heu</th>\n",
+       "      <th>receptor_progesterona.valor_mod</th>\n",
+       "      <th>receptor_progesterona.acertou</th>\n",
+       "      <th>status_her2.valor_heu</th>\n",
+       "      <th>status_her2.valor_mod</th>\n",
+       "      <th>status_her2.acertou</th>\n",
+       "      <th>...</th>\n",
+       "      <th>status_ck5_6.acertou</th>\n",
+       "      <th>ki67_percentual.valor_heu</th>\n",
+       "      <th>ki67_percentual.valor_mod</th>\n",
+       "      <th>ki67_percentual.acertou</th>\n",
+       "      <th>ctg_estrogenio</th>\n",
+       "      <th>ctg_progesterona</th>\n",
+       "      <th>ctg_her2</th>\n",
+       "      <th>ctg_ck5_6</th>\n",
+       "      <th>ctg_ki67</th>\n",
+       "      <th>erro</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MATERIAL ID:39 MATERIAL - Biópsia percutânea à...</td>\n",
+       "      <td>POSITIVO</td>\n",
+       "      <td>POSITIVO</td>\n",
+       "      <td>True</td>\n",
+       "      <td>POSITIVO</td>\n",
+       "      <td>POSITIVO</td>\n",
+       "      <td>True</td>\n",
+       "      <td>POSITIVO</td>\n",
+       "      <td>NEGATIVO</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              laudos  \\\n",
+       "0  MATERIAL ID:39 MATERIAL - Biópsia percutânea à...   \n",
+       "\n",
+       "  receptor_estrogeno.valor_heu receptor_estrogeno.valor_mod  \\\n",
+       "0                     POSITIVO                     POSITIVO   \n",
+       "\n",
+       "   receptor_estrogeno.acertou receptor_progesterona.valor_heu  \\\n",
+       "0                        True                        POSITIVO   \n",
+       "\n",
+       "  receptor_progesterona.valor_mod  receptor_progesterona.acertou  \\\n",
+       "0                        POSITIVO                           True   \n",
+       "\n",
+       "  status_her2.valor_heu status_her2.valor_mod  status_her2.acertou  ...  \\\n",
+       "0              POSITIVO              NEGATIVO                False  ...   \n",
+       "\n",
+       "  status_ck5_6.acertou ki67_percentual.valor_heu  ki67_percentual.valor_mod  \\\n",
+       "0                 True                         8                        8.0   \n",
+       "\n",
+       "   ki67_percentual.acertou  ctg_estrogenio  ctg_progesterona  ctg_her2  \\\n",
+       "0                     True               2                 3         4   \n",
+       "\n",
+       "   ctg_ck5_6  ctg_ki67  erro  \n",
+       "0          0         2  True  \n",
+       "\n",
+       "[1 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_excel('resultados_imuno3.xlsx')\n",
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff3d5e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
